2001-05-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_dated_cookie): Support `X-TMDA: dated timeout'
	(to override Defaults.TIMEOUT)

2001-05-10  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.13 development.

2001-05-02  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.12 development.

2001-05-02  Jason R. Mastaler  <jasonrm@nightshade.acl.lanl.gov>

	* Util.py (maketext): New function to make text from a template file.

2001-05-01  Jason R. Mastaler  <jasonrm@nightshade.acl.lanl.gov>

	* Defaults.py: To speed startup, the user's .tmdarc is now read
	first with default values computed only if necessary.

2001-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDARC): Add support for alternate config-file.

2001-04-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Begin 0.11 development.

2001-04-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (hexlify): New function to convert binary data strings to
	their hexidecimal notation.
	(unhexlify): New function to convert hex back to binary.

	(gethostname): Replaced socket.getfqdn() with
	socket.gethostbyaddr(socket.gethostname())[0] to get the machine's
	FQDN since the former is only available in Python >= 2.0.

	* Cookie.py (datemac): Replace binascii.hexlify with my own binary
	to hex function to support Python < 2.0.
	(make_sender_cookie): Ditto.

	* Defaults.py (mode): Ditto.

	* HMAC.py (_strxor): Python version earlier than 2.0 don't have
	built-in string methods; replace with string.join().

2001-04-26  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TMDA_VERSION): Bump up to a new major release level
	(0.10) indicating a major functionality change (HMAC).

	* Cookie.py (datemac): New function to compute an HMAC for a given
	date in time.
	