@@ -131,6 +131,16 @@ if not os.path.exists(INJECT):
 if not vars().has_key('INJECT_FLAGS'):
     INJECT_FLAGS = "f"
 
+# LOCALS
+# locals defaults to /var/qmail/crontrol/locals, but this lets you
+# override it in case it is installed elsewhere.
+# Used for virtualdomain detection in tmda-filter.
+if not vars().has_key('LOCALS'):
+     LOCALS = "/var/qmail/control/locals"
+if not os.path.exists(LOCALS):
+    print "file not found:",LOCALS
+    sys.exit(ERR_CONFIG)
+
 # LOGFILE
 # Filename which delivery statistics should be written to.
 # Default is 0 (no logging)
