@@ -1,3 +1,8 @@
+2001-05-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-filter (main): Fixed virtualdomain detection to work under
+	all cases.
+
 2001-05-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-inject (main): Support `X-TMDA: dated timeout'
