@@ -1,3 +1,8 @@
+2001-05-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* sample.tmdarc (LOCALS): Introduced new variable to support
+	virtualdomain detection.
+
 2001-04-30  Jason R. Mastaler  <jasonrm@nightshade.acl.lanl.gov>
 
 	* sample.tmdarc: Commented out all sections so people won't trip
